Working search for tx/block/block number

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,29 @@
-<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"></head><body><div id="container"></div><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.c97712297ee18d2d9317.chunk.js"></script><script src="/npm.mobx-react-lite.47deabde4cb153b672c1.chunk.js"></script><script src="/npm.react-dom.230f5062dd43b93beb74.chunk.js"></script><script src="/npm.react.a25f7d23b3f3e011f1d5.chunk.js"></script><script src="/npm.babel.562874164499d2732d39.chunk.js"></script><script src="/npm.mini-create-react-context.d0715170b050b6750c66.chunk.js"></script><script src="/npm.prop-types.229d58799a007ee58dee.chunk.js"></script><script src="/npm.react-router.64639a34c1733c528360.chunk.js"></script><script src="/npm.webpack.54fc207334cd81dde006.chunk.js"></script><script src="/main.4b74605d8a42748cdf72.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.c97712297ee18d2d9317.chunk.js"></script><script src="/npm.mobx-react-lite.47deabde4cb153b672c1.chunk.js"></script><script src="/npm.react-dom.230f5062dd43b93beb74.chunk.js"></script><script src="/npm.react.a25f7d23b3f3e011f1d5.chunk.js"></script><script src="/npm.babel.562874164499d2732d39.chunk.js"></script><script src="/npm.mini-create-react-context.d0715170b050b6750c66.chunk.js"></script><script src="/npm.prop-types.229d58799a007ee58dee.chunk.js"></script><script src="/npm.react-router.64639a34c1733c528360.chunk.js"></script><script src="/npm.webpack.54fc207334cd81dde006.chunk.js"></script><script src="/main.4b74605d8a42748cdf72.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.c97712297ee18d2d9317.chunk.js"></script><script src="/npm.mobx-react-lite.47deabde4cb153b672c1.chunk.js"></script><script src="/npm.react-dom.230f5062dd43b93beb74.chunk.js"></script><script src="/npm.react.a25f7d23b3f3e011f1d5.chunk.js"></script><script src="/npm.babel.562874164499d2732d39.chunk.js"></script><script src="/npm.mini-create-react-context.d0715170b050b6750c66.chunk.js"></script><script src="/npm.prop-types.229d58799a007ee58dee.chunk.js"></script><script src="/npm.react-router.64639a34c1733c528360.chunk.js"></script><script src="/npm.webpack.54fc207334cd81dde006.chunk.js"></script><script src="/main.83ead7f58f7caddb471d.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.c97712297ee18d2d9317.chunk.js"></script><script src="/npm.mobx-react-lite.47deabde4cb153b672c1.chunk.js"></script><script src="/npm.react-dom.230f5062dd43b93beb74.chunk.js"></script><script src="/npm.react.a25f7d23b3f3e011f1d5.chunk.js"></script><script src="/npm.babel.562874164499d2732d39.chunk.js"></script><script src="/npm.mini-create-react-context.d0715170b050b6750c66.chunk.js"></script><script src="/npm.prop-types.229d58799a007ee58dee.chunk.js"></script><script src="/npm.react-router.64639a34c1733c528360.chunk.js"></script><script src="/npm.webpack.54fc207334cd81dde006.chunk.js"></script><script src="/main.8ec589c6f10c1fb08e53.chunk.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <base href="/">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="icon" href="/favicon.png" />
+    <title>Zenotta Block Explorer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+</head>
+
+<body>
+    <div id="container"></div>
+    <script src="/runtime.baf7f83657516d6761f4.js"></script>
+    <script src="/npm.axios.e76d3536fea2d6bda013.chunk.js"></script>
+    <script src="/npm.mobx-react-lite.2b6bb59e6f3faa835244.chunk.js"></script>
+    <script src="/npm.react-dom.191ca8307f982899f31f.chunk.js"></script>
+    <script src="/npm.react.354341c143ad7f0678ce.chunk.js"></script>
+    <script src="/npm.babel.be78319fe4be89d0cdb4.chunk.js"></script>
+    <script src="/npm.mini-create-react-context.a04c0e0683bcc275dd87.chunk.js"></script>
+    <script src="/npm.prop-types.20a97967e85d3072cb4a.chunk.js"></script>
+    <script src="/npm.react-router.0f3f8d16d6605ce8c10f.chunk.js"></script>
+    <script src="/npm.webpack.5322b11844ed97e55e18.chunk.js"></script>
+    <script src="/main.d7145d264e3a0fbbed80.chunk.js"></script>
+</body>
+
+</html>
