--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,29 @@
-<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"></head><body><div id="container"></div><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.e76d3536fea2d6bda013.chunk.js"></script><script src="/npm.mobx-react-lite.2b6bb59e6f3faa835244.chunk.js"></script><script src="/npm.react-dom.191ca8307f982899f31f.chunk.js"></script><script src="/npm.react.354341c143ad7f0678ce.chunk.js"></script><script src="/npm.babel.be78319fe4be89d0cdb4.chunk.js"></script><script src="/npm.mini-create-react-context.a04c0e0683bcc275dd87.chunk.js"></script><script src="/npm.prop-types.20a97967e85d3072cb4a.chunk.js"></script><script src="/npm.react-router.e2a5ee0510054bcbc7bb.chunk.js"></script><script src="/npm.webpack.5322b11844ed97e55e18.chunk.js"></script><script src="/main.737ddfff79d1d6121fb6.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.de4e435452446f26e05c.chunk.js"></script><script src="/npm.mobx-react-lite.c027d669a56463a2fe8e.chunk.js"></script><script src="/npm.react-dom.a5d3fabf751591a9e147.chunk.js"></script><script src="/npm.react.f574f591ee5ac3cbdbc9.chunk.js"></script><script src="/npm.babel.96763f464b1bcb1181fb.chunk.js"></script><script src="/npm.mini-create-react-context.010cf19a7a63e4562add.chunk.js"></script><script src="/npm.prop-types.9aab25641ad54c0efad9.chunk.js"></script><script src="/npm.react-router.5c7d39a5b64c944ac91b.chunk.js"></script><script src="/npm.webpack.790f7a37264aea508f61.chunk.js"></script><script src="/main.31b692d2f3fc76997796.chunk.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <base href="/">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="icon" href="/favicon.png" />
+    <title>Zenotta Block Explorer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+</head>
+
+<body>
+    <div id="container"></div>
+    <script src="/runtime.baf7f83657516d6761f4.js"></script>
+    <script src="/npm.axios.ab577d453eb6c0254e71.chunk.js"></script>
+    <script src="/npm.mobx-react-lite.994de908287dfae86238.chunk.js"></script>
+    <script src="/npm.react-dom.e98ba9671237d0808475.chunk.js"></script>
+    <script src="/npm.react.b22ba3e66a3caae06c7f.chunk.js"></script>
+    <script src="/npm.babel.aeec932c6a49c2a19b1b.chunk.js"></script>
+    <script src="/npm.mini-create-react-context.010cf19a7a63e4562add.chunk.js"></script>
+    <script src="/npm.prop-types.72e0899984e86050d4bb.chunk.js"></script>
+    <script src="/npm.react-router.92eb1bd04df134bc6217.chunk.js"></script>
+    <script src="/npm.webpack.252b8572c68078d0b4f3.chunk.js"></script>
+    <script src="/main.2a46b94f2f9e0ff82ef5.chunk.js"></script>
+</body>
+
+</html>
