Global design changes and layout components

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <div id="app"></div>
     <script src="/runtime.baf7f83657516d6761f4.js"></script>
     <script src="/npm.axios.ab577d453eb6c0254e71.chunk.js"></script>
     <script src="/npm.mobx-react-lite.994de908287dfae86238.chunk.js"></script>
