Implemented txs extraction from express server and Txs explorer

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <base href="/">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="icon" href="/favicon.png" />
-    <title>Zenotta Block Explorer</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="/runtime.baf7f83657516d6761f4.js"></script>
-    <script src="/npm.axios.9a4979d87b1cf63b1dba.chunk.js"></script>
-    <script src="/npm.mobx-react-lite.ad734d30c71bcf2c80c6.chunk.js"></script>
-    <script src="/npm.react-dom.72be52d6d01daa0802b2.chunk.js"></script>
-    <script src="/npm.react.9f7cbc01a93fc367211d.chunk.js"></script>
-    <script src="/npm.babel.a539ce52db25ac35065e.chunk.js"></script>
-    <script src="/npm.mini-create-react-context.1c06614585bad87c6832.chunk.js"></script>
-    <script src="/npm.prop-types.64df5c3be4a5822ae5c2.chunk.js"></script>
-    <script src="/npm.react-router.1c8bfa2fef472ebfd0b3.chunk.js"></script>
-    <script src="/npm.webpack.eb29ac9fa5ca57b6e391.chunk.js"></script>
-    <script src="/main.8c7f62be6338e5fbbe82.chunk.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"></head><body><div id="app"></div><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.0e7a62d0dcdc87834185.chunk.js"></script><script src="/npm.mobx-react-lite.b601566143f75203da9b.chunk.js"></script><script src="/npm.react-dom.6ff388cad630a9dc1322.chunk.js"></script><script src="/npm.react.8d6ac88c885f608f4a62.chunk.js"></script><script src="/npm.babel.c1c0d6d4ca0acea9917d.chunk.js"></script><script src="/npm.mini-create-react-context.0e961e6952f5213d5036.chunk.js"></script><script src="/npm.prop-types.2567face8768fef67d66.chunk.js"></script><script src="/npm.react-router.8f1a98c367ae5fd46b95.chunk.js"></script><script src="/npm.webpack.74580ec246082fca8486.chunk.js"></script><script src="/main.a06463ffea463ebcfa19.chunk.js"></script></body></html>
