--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,35 @@
-<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"></head><body><div id="app"></div><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.0e7a62d0dcdc87834185.chunk.js"></script><script src="/npm.mobx-react-lite.b601566143f75203da9b.chunk.js"></script><script src="/npm.react-dom.6ff388cad630a9dc1322.chunk.js"></script><script src="/npm.react.8d6ac88c885f608f4a62.chunk.js"></script><script src="/npm.babel.c1c0d6d4ca0acea9917d.chunk.js"></script><script src="/npm.mini-create-react-context.0e961e6952f5213d5036.chunk.js"></script><script src="/npm.prop-types.2567face8768fef67d66.chunk.js"></script><script src="/npm.react-router.8f1a98c367ae5fd46b95.chunk.js"></script><script src="/npm.webpack.74580ec246082fca8486.chunk.js"></script><script src="/main.a06463ffea463ebcfa19.chunk.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <base href="/">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="icon" href="/favicon.png" />
+    <title>Zenotta Block Explorer</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Fira+Sans:wght@200;300;400&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+</head>
+
+<body>
+    <div id="app"></div>
+    <script src="/runtime.baf7f83657516d6761f4.js"></script>
+    <script src="/npm.axios.0e7a62d0dcdc87834185.chunk.js"></script>
+    <script src="/npm.mobx-react-lite.b601566143f75203da9b.chunk.js"></script>
+    <script src="/npm.react-dom.6ff388cad630a9dc1322.chunk.js"></script>
+    <script src="/npm.react.8d6ac88c885f608f4a62.chunk.js"></script>
+    <script src="/npm.babel.c1c0d6d4ca0acea9917d.chunk.js"></script>
+    <script src="/npm.mini-create-react-context.0e961e6952f5213d5036.chunk.js"></script>
+    <script src="/npm.prop-types.2567face8768fef67d66.chunk.js"></script>
+    <script src="/npm.react-router.8f1a98c367ae5fd46b95.chunk.js"></script>
+    <script src="/npm.webpack.74580ec246082fca8486.chunk.js"></script>
+    <script src="/main.a06463ffea463ebcfa19.chunk.js"></script>
+</body>
+
+</html>
