Numerous design changes; Add footer content

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <base href="/">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="icon" href="/favicon.png" />
-    <title>Zenotta Block Explorer</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Fira+Sans:wght@200;300;400&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="/runtime.baf7f83657516d6761f4.js"></script>
-    <script src="/npm.axios.0e7a62d0dcdc87834185.chunk.js"></script>
-    <script src="/npm.mobx-react-lite.b601566143f75203da9b.chunk.js"></script>
-    <script src="/npm.react-dom.6ff388cad630a9dc1322.chunk.js"></script>
-    <script src="/npm.react.8d6ac88c885f608f4a62.chunk.js"></script>
-    <script src="/npm.babel.c1c0d6d4ca0acea9917d.chunk.js"></script>
-    <script src="/npm.mini-create-react-context.0e961e6952f5213d5036.chunk.js"></script>
-    <script src="/npm.prop-types.2567face8768fef67d66.chunk.js"></script>
-    <script src="/npm.react-router.8f1a98c367ae5fd46b95.chunk.js"></script>
-    <script src="/npm.webpack.74580ec246082fca8486.chunk.js"></script>
-    <script src="/main.a06463ffea463ebcfa19.chunk.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Fira+Sans:wght@200;300;400&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/></head><body><div id="app"></div><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.axios.0e7a62d0dcdc87834185.chunk.js"></script><script src="/npm.mobx-react-lite.b601566143f75203da9b.chunk.js"></script><script src="/npm.react-dom.6ff388cad630a9dc1322.chunk.js"></script><script src="/npm.react.8d6ac88c885f608f4a62.chunk.js"></script><script src="/npm.babel.c1c0d6d4ca0acea9917d.chunk.js"></script><script src="/npm.mini-create-react-context.0e961e6952f5213d5036.chunk.js"></script><script src="/npm.prop-types.2567face8768fef67d66.chunk.js"></script><script src="/npm.react-router.8f1a98c367ae5fd46b95.chunk.js"></script><script src="/npm.webpack.74580ec246082fca8486.chunk.js"></script><script src="/main.a06463ffea463ebcfa19.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.react-bootstrap.7bae998ebfe50e53066f.chunk.js"></script><script src="/npm.popperjs.0a912728127fcab61965.chunk.js"></script><script src="/npm.restart.57e1a1d5f7219c163070.chunk.js"></script><script src="/npm.axios.3f1240f8f65c9adf3fbb.chunk.js"></script><script src="/npm.dom-helpers.fa61769ee628f323c3c8.chunk.js"></script><script src="/npm.mobx-react-lite.0aff24c9a60abf80e77a.chunk.js"></script><script src="/npm.uncontrollable.0af4451e54209194ad8b.chunk.js"></script><script src="/npm.react-transition-group.d0207f8b04051c9a0db0.chunk.js"></script><script src="/npm.react-dom.be85245a64fa9eddb971.chunk.js"></script><script src="/main.8ad29c1c1cc2de3b0b2e.chunk.js"></script><script src="/runtime.baf7f83657516d6761f4.js"></script><script src="/npm.react-bootstrap.7bae998ebfe50e53066f.chunk.js"></script><script src="/npm.popperjs.0a912728127fcab61965.chunk.js"></script><script src="/npm.restart.57e1a1d5f7219c163070.chunk.js"></script><script src="/npm.axios.3f1240f8f65c9adf3fbb.chunk.js"></script><script src="/npm.dom-helpers.fa61769ee628f323c3c8.chunk.js"></script><script src="/npm.mobx-react-lite.0aff24c9a60abf80e77a.chunk.js"></script><script src="/npm.uncontrollable.0af4451e54209194ad8b.chunk.js"></script><script src="/npm.react-transition-group.d0207f8b04051c9a0db0.chunk.js"></script><script src="/npm.react-dom.be85245a64fa9eddb971.chunk.js"></script><script src="/main.8ad29c1c1cc2de3b0b2e.chunk.js"></script></body></html>
