--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <base href="/">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="icon" href="/favicon.png" />
-    <title>Zenotta Block Explorer</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Fira+Sans:wght@200;300;400&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-</head>
-
-<body>
-    <div id="app"></div>
-    <script src="/runtime.baf7f83657516d6761f4.js"></script>
-    <script src="/npm.react-bootstrap.756a104bfb7742c11ea3.chunk.js"></script>
-    <script src="/npm.popperjs.9bdeb6409e981c0929d1.chunk.js"></script>
-    <script src="/npm.restart.611eb6336cc8e2e9f679.chunk.js"></script>
-    <script src="/npm.axios.d20da31a5022aa26fd30.chunk.js"></script>
-    <script src="/npm.dom-helpers.7b759f885645c7dffd39.chunk.js"></script>
-    <script src="/npm.mobx-react-lite.7bd57343e95de32e9988.chunk.js"></script>
-    <script src="/npm.uncontrollable.64dd01c87d2bda3bed0b.chunk.js"></script>
-    <script src="/npm.react-transition-group.c0ec826a75e58d8b7406.chunk.js"></script>
-    <script src="/npm.react-dom.3650ee938a12c8497fe0.chunk.js"></script>
-    <script src="/main.b9abe558e587e25f6914.chunk.js"></script>
-</body>
-
-</html>
-
+<!doctype html><html lang="en"><head><base href="/"><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" href="/favicon.png"/><title>Zenotta Block Explorer</title><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Fira+Sans:wght@200;300;400&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/></head><body><div id="app"></div><script src="/runtime.6c71e07ca5498d068e40.js"></script><script src="/npm.react-bootstrap.3636abccf5d1bf4dc51a.chunk.js"></script><script src="/npm.popperjs.617f2bb726dc7aced0bd.chunk.js"></script><script src="/npm.restart.ef84c28cd11ba58d74f3.chunk.js"></script><script src="/npm.axios.d9b763783f47aa21c8f3.chunk.js"></script><script src="/npm.dom-helpers.644faf4e22df2f98dc0f.chunk.js"></script><script src="/npm.mobx-react-lite.84d31ef7f0cabef7fa68.chunk.js"></script><script src="/npm.uncontrollable.160326686e8cf2136efb.chunk.js"></script><script src="/npm.react-transition-group.ee1531e69fc60d1cf10c.chunk.js"></script><script src="/npm.react-dom.22fe9fa9107b013f217e.chunk.js"></script><script src="/main.85bbf759bfda4a5cbe06.chunk.js"></script></body></html>
